--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
     "istanbul": "^0.4.3",
-    "meshblu-amqp": "^1.1.0",
-    "meshblu-core-job-manager": "^3.2.2",
+    "meshblu-amqp": "^1.2.1",
     "mocha": "^2.4.5",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.17.3",
@@ -35,6 +34,8 @@
     "bluebird": "^3.3.5",
     "debug": "^2.2.0",
     "ioredis": "^1.15.1",
-    "meshblu-core-manager-hydrant": "^1.2.2"
+    "meshblu-core-manager-hydrant": "^1.3.1",
+    "meshblu-uuid-alias-resolver": "^1.0.3",
+    "redlock": "^2.0.0"
   }
 }
