--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshblu-core-worker-firehose-amqp",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Meshblu AMQP worker",
   "main": "command.js",
   "scripts": {
@@ -29,13 +29,16 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "@octoblu/redis-ns": "^1.2.2",
+    "@octoblu/redis-ns": "^1.3.1",
     "amqp10": "^3.1.4",
     "bluebird": "^3.3.5",
     "debug": "^2.2.0",
-    "ioredis": "^1.15.1",
-    "meshblu-core-manager-hydrant": "^1.3.1",
+    "ioredis": "^2.0.1",
+    "meshblu-core-manager-hydrant": "^1.6.0",
     "meshblu-uuid-alias-resolver": "^1.0.3",
     "redlock": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "hiredis": "^0.4.1"
   }
 }
