--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ before_script:
 - sudo rabbitmqctl set_permissions some-uuid '^(amq\.gen.*|amq\.default|^some-uuid.*)$' '.*' '.*'
 after_script:
 - codeclimate-test-reporter < coverage/lcov.info
+after_success:
+- bash <(curl -s https://codecov.io/bash)
