--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ after_script:
 - codeclimate-test-reporter < coverage/lcov.info
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+branches:
+  only:
+  - "/^v[0-9]/"
