--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Meshblu AMQP worker",
   "main": "command.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- -R spec --require coffee-coverage/register-istanbul && mocha --reporter json > coverage/mocha.json"
+    "test": "mocha",
+    "coverage": "nyc npm test",
+    "mocha:json": "env NPM_ENV=test mocha --reporter json > coverage/mocha.json",
+    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-"
   },
   "repository": {
     "type": "git",
@@ -19,12 +22,12 @@
   "homepage": "https://github.com/octoblu/meshblu-core-worker-firehose-amqp#readme",
   "devDependencies": {
     "chai": "^3.5.0",
-    "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
-    "istanbul": "^0.4.3",
     "meshblu-amqp": "^1.2.1",
     "mocha": "^2.4.5",
-    "mocha-istanbul": "^0.2.0",
+    "mocha-multi": "^0.9.1",
+    "mocha-osx-reporter": "^0.1.2",
+    "nyc": "^8.3.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   },
@@ -40,5 +43,16 @@
   },
   "optionalDependencies": {
     "hiredis": "^0.4.1"
+  },
+  "nyc": {
+    "cache": true,
+    "reporter": [
+      "text-summary",
+      "lcov",
+      "json"
+    ],
+    "extension": [
+      ".coffee"
+    ]
   }
 }
