--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
 - '5'
+global:
+  - DEBUG=*
 services:
 - redis
 - rabbitmq
@@ -16,9 +18,6 @@ before_script:
 - sudo rabbitmqctl set_permissions some-uuid '^(amq\.gen.*|amq\.default|^some-uuid.*)$' '.*' '.*'
 after_script:
 - codeclimate-test-reporter < coverage/lcov.info
-branches:
-  only:
-  - "/^v[0-9]/"
 after_success:
 - npm run coverage
 - npm run mocha:json
