--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-sudo: required
 language: node_js
 node_js:
 - '5'
-env:
-  global:
-  - DEBUG=*
 services:
 - redis
 - rabbitmq
@@ -18,6 +14,7 @@ before_script:
 - sudo rabbitmqctl set_permissions meshblu ".*" ".*" ".*"
 - sudo rabbitmqctl add_user some-uuid some-token
 - sudo rabbitmqctl set_permissions some-uuid '^(amq\.gen.*|amq\.default|^some-uuid.*)$' '.*' '.*'
+- sleep 10
 after_script:
 - codeclimate-test-reporter < coverage/lcov.info
 after_success:
